# src/config/swagger.json
@@ -82,30 +82,6 @@
 				],
 				"type": "object",
 				"additionalProperties": false
-			},
-			"ITsoaSuccessResponse_string_": {
-				"properties": {
-					"resultType": {
-						"type": "string"
-					},
-					"error": {
-						"type": "number",
-						"enum": [
-							null
-						],
-						"nullable": true
-					},
-					"success": {
-						"type": "string"
-					}
-				},
-				"required": [
-					"resultType",
-					"error",
-					"success"
-				],
-				"type": "object",
-				"additionalProperties": false
 			}
 		},
 		"securitySchemes": {}
@@ -215,43 +191,129 @@
 			}
 		},
 		"/user/refresh": {
-			"post": {
+			"get": {
 				"operationId": "Refresh",
 				"responses": {
 					"200": {
-						"description": "Ok",
+						"description": "토큰 재발급",
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/ITsoaSuccessResponse_string_"
+									"$ref": "#/components/schemas/ITsoaSuccessResponse_UserLoginResponse_"
+								}
+							}
+						}
+					},
+					"400": {
+						"description": "헤더 누락값 존재",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ITsoaErrorResponse"
+								},
+								"examples": {
+									"Example 1": {
+										"value": {
+											"resultType": "FAIL",
+											"error": {
+												"errorCode": "EC404",
+												"reason": "누락값이 존재합니다.",
+												"data": "헤더에 토큰이 존재하지 않습니다."
+											},
+											"success": null
+										}
+									}
+								}
+							}
+						}
+					},
+					"401": {
+						"description": "jwt 토큰 만료",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ITsoaErrorResponse"
+								},
+								"examples": {
+									"Example 1": {
+										"value": {
+											"resultType": "FAIL",
+											"error": {
+												"errorCode": "ERR-1",
+												"reason": "Expired",
+												"data": {
+													"name": "TokenExpiredError",
+													"message": "jwt expired",
+													"expiredAt": "2025-07-14T01:29:15.000Z"
+												}
+											},
+											"success": null
+										}
+									}
+								}
+							}
+						}
+					},
+					"404": {
+						"description": "일치하지 않는 토큰 사용",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ITsoaErrorResponse"
+								},
+								"examples": {
+									"Example 1": {
+										"value": {
+											"resultType": "FAIL",
+											"error": {
+												"errorCode": "ERR-1",
+												"reason": "JsonWebToken error",
+												"data": "DB에 사용자 로그인 정보가 존재하지 않습니다. 다시 로그인해주세요"
+											},
+											"success": null
+										}
+									},
+									"Example 2": {
+										"value": {
+											"resultType": "FAIL",
+											"error": {
+												"errorCode": "ERR-1",
+												"reason": "JsonWebToken error",
+												"data": {
+													"name": "JsonWebTokenError",
+													"message": "invalid signature"
+												}
+											},
+											"success": null
+										}
+									},
+									"Example 3": {
+										"value": {
+											"resultType": "FAIL",
+											"error": {
+												"errorCode": "ERR-1",
+												"reason": "JsonWebToken error",
+												"data": {
+													"statusCode": 404,
+													"code": "ERR-1",
+													"description": "유효하지 않은 토큰입니다."
+												}
+											},
+											"success": null
+										}
+									}
 								}
 							}
 						}
 					}
 				},
+				"description": "토큰검증",
+				"summary": "데이터베이스에 토큰이 존재하는지 검증하고, 유효할 경우 새로운 토큰을 발급해준다.",
 				"tags": [
 					"User Controller"
 				],
 				"security": [],
-				"parameters": [],
-				"requestBody": {
-					"required": true,
-					"content": {
-						"application/json": {
-							"schema": {
-								"properties": {
-									"token": {
-										"type": "string"
-									}
-								},
-								"required": [
-									"token"
-								],
-								"type": "object"
-							}
-						}
-					}
-				}
+				"parameters": []
 			}
 		}
 	},
